<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_tea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_tea"
            android:onClick="setTea"
            android:layout_weight="1"
            android:textSize="20dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_coffee"
            android:onClick="setCoffee"
            android:layout_weight="1"
            android:textSize="20dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_milk"
            android:onClick="setMilk"
            android:layout_weight="1"
            android:textSize="20dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_noMilk"
            android:onClick="setNoMilk"
            android:layout_weight="1"
            android:textSize="20dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_noSugar"
            android:onClick="setNoSugar"
            android:layout_weight="1"
            android:textSize="15dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_oneSugar"
            android:onClick="setOneSugar"
            android:layout_weight="1"
            android:textSize="15dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_twoSugar"
            android:onClick="setTwoSugar"
            android:layout_weight="1"
            android:textSize="15dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"/>
    </LinearLayout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/current_drink_message"
            android:textSize="25dp"/>
    </RelativeLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_addCurrentDrink"
            android:onClick="addCurrentDrink" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/drink_count_message"
            android:textSize="40dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_viewDrinks"
            android:onClick="viewDrinks" />
    </LinearLayout>
</LinearLayout>

    <!--
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.martin.teaorcoffee.MainActivity"
        tools:showIn="@layout/activity_main">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_tea"
            android:onClick="sendMessage" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_coffee"
            android:onClick="sendMessage" />
    </RelativeLayout>
    -->